# hickathon-2023

./: .gitignore  .gitlab-ci.yml  README.md  features.py  pyproject.toml  run.py
cv_results/: 2023-01-15_07-00-38.pickle
datasets/small/: sample_submission_sent.csv
datasets/small/test/: test_features_sent.csv
datasets/small/train/: train_labels_sent.csv
instructions/: ScientificProcedureTemplate.md
notebooks/: data_exploration.html  data_exploration.ipynb  data_preprocessing.ipynb  model_exploration.ipynb  run.ipynb  search_parameters.ipynb
src/hickathon_2023/: data_preprocessing.py  feature_extraction.py  features.py  model.py  utils.py
src/hickathon_2023/features_md/: features_after_extraction.md  features_before_extraction.md  features_to_onehotencode.md  script.py
tests/: test_run.py
