[tool.poetry]
name = "hickathon-2023"
version = "0.1.0"
description = ""
authors = ["Baptiste Pasquier <pasquierbaptiste@hotmail.fr>"]
readme = "README.md"
packages = [{include = "hickathon_2023", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
numpy = "1.22.1"
pandas = "1.2.5"
matplotlib = "3.3.4"
seaborn = "0.11.2"
plotly = "5.3.1"
scikit-learn = "1.1.1"
xgboost = "^1.7.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = {extras = ["jupyter"], version = "^22.12.0"}
ipykernel = "^6.20.1"
ipywidgets = ">=7.0,<8.0"
pre-commit = "^2.21.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
